# sync-kgraph

./: .clang-format  .clang-tidy  .gitignore  LICENSE  README.md  meson.build  meson_options.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
cypher/: install_schema.cypher  triggers_mark_dirty.cypher  uninstall.cypher
examples/office/: 00_reset_and_load.cypher  01_validate.cypher  02_build_oracle.cypher  03_word_to_target.cypher  04_explain.cypher  README.md
include/sync_kgraph/: sync.h
scripts/: check-format.sh  coverage.sh  memgraph_local_smoke.sh  memgraph_smoke.sh  package_release.sh  run-clang-tidy.sh  valgrind.sh
src/: sync.c  sync_cli.c
src/memgraph/: sync_module.c
tests/: test_core.c
views/: sync_automata.gss
